<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.FirstFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="177dp"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="328dp"
        android:layout_height="27dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="42dp"
        android:text="@string/instructions"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <View
        android:id="@+id/view2"
        android:layout_width="412dp"
        android:layout_height="14dp"
        android:layout_marginTop="13dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="168dp"
        android:layout_height="23dp"
        android:layout_marginStart="121dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="122dp"
        android:text="@string/your_all_time_statistics"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <TextView
        android:id="@+id/gameStatsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="122dp"
        android:text="@string/results"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="170dp"
        android:layout_marginTop="66dp"
        android:layout_marginEnd="171dp"
        android:text="Win or lose"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameStatsTextView" />

    <ImageView
        android:id="@+id/rockImageView"
        android:layout_width="112dp"
        android:layout_height="61dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="16dp"
        android:background="@color/colorPrimaryDark"
        android:src="@drawable/rock"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/paperImageView"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/paperImageView"
        android:layout_width="112dp"
        android:layout_height="61dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/colorPrimaryDark"
        android:src="@drawable/paper"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/siccorsImageView"
        app:layout_constraintStart_toEndOf="@+id/rockImageView" />

    <ImageView
        android:id="@+id/siccorsImageView"
        android:layout_width="112dp"
        android:layout_height="61dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/colorPrimaryDark"
        android:src="@drawable/scissors"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/paperImageView"
         />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="314dp"
        android:layout_height="80dp"
        android:layout_marginStart="54dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="43dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultTextView">

        <ImageView
            android:id="@+id/computerChoiceIamgeView"
            android:layout_width="79dp"
            android:layout_height="79dp"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            tools:src="@tools:sample/avatars" />

        <LinearLayout
            android:layout_width="44dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="26dp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/v_s"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold|italic" />
        </LinearLayout>

        <ImageView
            android:id="@+id/yourChoiceImageView"
            android:layout_width="79dp"
            android:layout_height="79dp"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            tools:src="@tools:sample/avatars" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="9dp"
        android:text="@string/computer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="91dp"
        android:text="@string/you"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>